<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator1     by Matthew Diaz</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b_add">+</string>
    <string name="b_sub">-</string>
    <string name="b_mult">*</string>
    <string name="b_div">/</string>
    <string name="b_equals">=</string>
    <string name="b_clc">clc</string>
    <string name="cal_screen"> </string>
    <string name="toast_View">Cannot divide by zero!</string>
</resources>
