<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/screenView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cal_screen"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b7"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/screenView"
        android:layout_alignParentStart="true"
        android:onClick="b7_action"
        />

    <Button
        android:id="@+id/button_8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b8"
        android:onClick="b8_action"
        android:layout_alignTop="@+id/button_7"
        android:layout_alignStart="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b9"
        android:onClick="b9_action"
        android:layout_alignTop="@+id/button_8"
        android:layout_alignStart="@+id/button_3" />

    <Button
        android:id="@+id/button_4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b4"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="b4_action"
        />

    <Button
        android:id="@+id/button_5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b5"
        android:onClick="b5_action"
        android:layout_alignTop="@+id/button_4"
        android:layout_alignStart="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b6"
        android:onClick="b6_action"
        android:layout_alignTop="@+id/button_5"
        android:layout_alignStart="@+id/button_9" />

    <Button
        android:id="@+id/button_1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/button_4"
        android:layout_alignParentStart="true"
        android:onClick="b1_action"
        />

    <Button
        android:id="@+id/button_2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:onClick="b2_action"
        android:layout_alignTop="@+id/button_1"
        android:layout_toEndOf="@+id/button_clear" />

    <Button
        android:id="@+id/button_3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:onClick="b3_action"
        android:layout_alignTop="@+id/button_2"
        android:layout_alignEnd="@+id/button_equals" />

    <Button
        android:id="@+id/button_0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b0"
        android:layout_below="@+id/button_1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:onClick="b0_action"
        />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_add"
        android:layout_alignBottom="@+id/button_9"
        android:layout_alignParentEnd="true"
        android:onClick="b_add_action"
        />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_sub"
        android:layout_above="@+id/button_1"
        android:layout_alignParentEnd="true"
        android:onClick="b_sub_action"
        />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_mult"
        android:layout_alignTop="@+id/button_3"
        android:layout_alignParentEnd="true"
        android:onClick="b_mult_action"
        />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_div"
        android:layout_alignTop="@+id/button_0"
        android:layout_alignStart="@+id/button_multiply"
        android:onClick="b_div_action"
        />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_equals"
        android:onClick="b_equals_action"
        android:background="#ff6cc2dd"
        android:layout_alignTop="@+id/button_clear"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/b_clc"
        android:layout_alignTop="@+id/button_0"
        android:layout_toEndOf="@+id/button_0"
        android:onClick="b_clear_action"
        />


</RelativeLayout>
